After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761402 - GtkRange doesn't reset in_drag flag correctly
GtkRange doesn't reset in_drag flag correctly
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: GtkRange
3.19.x
Other Linux
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2016-02-01 13:29 UTC by Timm Bäder
Modified: 2016-02-04 16:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (3.60 KB, patch)
2016-02-01 13:29 UTC, Timm Bäder
accepted-commit_now Details | Review

Description Timm Bäder 2016-02-01 13:29:18 UTC
Created attachment 320181 [details] [review]
Proposed patch

See the commit message of the attached patch for details.

This happens e.g. when entering the fine-tune mode via long-press in a GtkScale in the widget-factory, then releasing the mouse button, then pressing Shift.
Comment 1 Carlos Garnacho 2016-02-04 15:53:46 UTC
Review of attachment 320181 [details] [review]:

Looks good! Just a minor comment.

::: gtk/gtkrange.c
@@ +2620,3 @@
   priv->mouse_x = x;
   priv->mouse_y = y;
+  if (priv->grab_location == MOUSE_SLIDER)

you might even unset in_drag invariably. If the gestures ended we're not going to be in a drag regardless of the position.
Comment 2 Timm Bäder 2016-02-04 16:14:45 UTC
Pushed as 35cd0be46863b94eb7b1e0d214a1fbbca9187457 with the mentioned change.

Thanks!